--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,125 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+:root{
+  --highlighter : #f1356d;
+  --primarycolor : #333;
+  --borderColor : #f2f2f2;
 }
+p{
+  color: var(--primarycolor)
+}
+/* import font-family : Quicksand */
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+*{
+  margin: 0;
+  color: var(--primarycolor);
+  font-family: Quicksand;
+}
+.navbar{
+  padding: 20px;
+  max-width: 600px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #f2f2f2;
+  margin: 0 auto;
+}
+
+.navbar h1{
+  color: var(--highlighter);
+}
+.navbar .links{
+  margin-left: auto;
+}
+.navbar a{
+  text-decoration: none;
+  padding: 6px;
+  margin-left: 16px;
+}
+.navbar a:hover{
+  color:var(--highlighter);
+}
+.content{
+  margin: 40px auto;
+  padding: 20px;
+  max-width: 600px;  
+}
+.list-title{
+  font-size: 25px;
+  color: var(--primarycolor);
+}
+.list{
+  margin: 15px;
+}
+.blogcard{
+  padding: 5px;
+  margin: 15px 0;
+}
+.blogcard:hover{
+  cursor: pointer;
+  border: 2px solid var(--borderColor);
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px var();
+}
+.blogcard h2{
+  margin-block: 5px;
+  color: var(--highlighter);
+}
+.blog-detail h2{
+  color: var(--highlighter);
+  font-size: 20px;
+  margin-block: 10px;
+}
+.blog-detail-author{
+  font-size: 15px;
+  margin-bottom: 20px;
+}
+.blog-description {
+  margin-block: 5px;
+}
+
+
+/* create blog's css */
+.create{
+  max-width: 400px;
+  margin-inline: auto;
+  text-align: center;
+}
+.create h2{
+  color: var(--highlighter);
+  font-size: 20px;
+  margin-bottom: 30px;
+}
+.create label{
+  text-align: left;
+  display: block;
+}
+.create input,.create textarea,.create select{
+  width: 100%;
+  padding: 6px 10px;
+  margin-block: 10px;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  display: block;
+}
+.create select option{
+ padding: 8px;
+}
+.create button,.blog-detail button{
+  background-color: var(--highlighter);
+  color: #fff;
+  border: none;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+  margin-block: 10px;
+}
+/* not-found page's css */
+.not-found p{
+  /* text-align: center; */
+  margin-inline: auto;
+}
+
+
+
